--- a/templates/account.html
+++ b/templates/account.html
@@ -74,7 +74,7 @@
                                     </div>
                                     <div class="item-grid-entry">
                                         <span class="item-title">Actions</span>
-                                        <a href={{url_for('delete_vehicle', id=vehicles[i].vehicle_id)}}><i class="fa-solid fa-trash"></i></a>
+                                        <a href={{url_for( 'delete_vehicle', vehicle_id=vehicles[i].vehicle_id)}}><i class="fa-solid fa-trash"></i></a>
                                     </div>
                                 </div>
                             </div>
