Latest repo code

--- a/templates/vehicles.html
+++ b/templates/vehicles.html
@@ -21,11 +21,11 @@
                         </div>
                         <div class="item-grid-entry">
                             <span class="item-title">Drive in date</span>
-                            <span class="item-value">{{ logs[i].drive_in_date }}</span>
+                            <span class="item-value">{{ drive_ins[i] }}</span>
                         </div>
                         <div class="item-grid-entry">
                             <span class="item-title">Drive out date</span>
-                            <span class="item-value">{{ logs[i].drive_out_date }}</span>
+                            <span class="item-value">{{ drive_outs[i] }}</span>
                         </div>
                         <div class="item-grid-entry">
                             <span class="item-title">Image</span>
